@@ -32,15 +32,15 @@
 		<h3>Controls</h3>
 <pre>
    forward
-      |                          ↱Hold left mouse button and drag:
-   up |  down                   ┌──┬──┐     Adjust viewport.
-   ↓  ↓  ↓                      │  │  │
-   Q  W  E  R←reset viewport    ├──┴──┤
-   A  S  D                      │     │
-   ↑  ↑  ↑                      │     │
-left  |  right                  │     │
-      |                         └─────┘
-   backward
+      |                              ↱Hold left mouse button and drag:
+   up |  down                       ┌──┬──┐     Adjust viewport.
+   ↓  ↓  ↓                          │  │  │
+   Q  W  E  R←reset viewport        ├──┴──┤
+   A  S  D                          │     │
+   ↑  ↑  ↑                          │     │
+left  |  right        ←  →          │     │
+      |          Seek left/right    └─────┘
+   backward   (Hold shift to seek 5% instead of 1%)
 </pre>
 		<h3>Options</h3>
 		<ul>
