@@ -67,6 +67,8 @@ class qmpPluginAPI
 		virtual uint32_t getCurrentPolyphone();
 		virtual uint32_t getMaxPolyphone();
 		virtual uint32_t getCurrentTimeStamp();
+		virtual uint32_t getCurrentPlaybackPercentage();
+		virtual void playerSeek(uint32_t percentage);
 		virtual double getPitchBend(int ch);
 		virtual bool getChannelMask(int ch);
 		virtual std::string getTitle();
