@@ -1,3 +1,6 @@
+2016-05-24 0.8.1 alpha
+Add seeking with arrow buttons in visualization.
+
 2016-05-23 0.8.1 alpha
 Add horizontal visualization mode.
 Add build date in version page.
